--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,27 @@ img.small {
     vertical-align: middle;
 }
 
+.ulBoxAbout {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	list-style: none;
+	/*max-width: 65%;*/
+	margin-top: 50px;
+	padding-left: 5px;
+}
+
+.liFlex1 {
+	background: #FCFCF7;
+ 	border-radius: 3px;
+ 	height: 30px;
+	width: 220px;
+	margin-top: 20px;
+	box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12);
+    text-align:center;
+    display: inline-block;
+    vertical-align: middle;
+}
 
 li a {
 	text-decoration: none;
