--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ h1 {
 	padding: 30px 0 10px;
 }
 
+#title {
+	padding: 13px 0 0 10px;
+}
+
 h2 {
 	font-size: 28px;
     margin: 0;
@@ -235,7 +239,7 @@ img.small {
 	justify-content: center space-between;
 	list-style: none;
 	max-width: 65%;
-	margin-top: 50px;
+	margin-top: 8px;
 	padding-left: 5px;
 }
 
@@ -257,7 +261,7 @@ img.small {
 	justify-content: center;
 	list-style: none;
 	/*max-width: 65%;*/
-	margin-top: 50px;
+	margin-top: 58px;
 	padding-left: 5px;
 }
 
