--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,7 @@ img.small {
 }
 
 .headBox {
-    background-color: rgba(189, 189, 189, 0.25);
+    /*background-color: rgba(189, 189, 189, 0.25);*/ /* I like it white :) */
 	/*position: fixed; */ /*I have decided to not have the headBox fixed because by fixing it my links won't be flexible anymore.*/
     padding: 20px 0;
 	height: 80px;
