--- a/styles.css
+++ b/styles.css
@@ -258,11 +258,11 @@ img.small {
 .ulBoxAbout {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: flex-start;
 	list-style: none;
 	/*max-width: 65%;*/
-	margin-top: 58px;
-	padding-left: 5px;
+	margin-top: 50px;
+	padding-left: 1px;
 }
 
 .liFlex1 {
