--- a/styles.css
+++ b/styles.css
@@ -65,17 +65,17 @@ h1, h2, h3, h4, h5, h6, header {
     letter-spacing: -1px;
 }
 
-aside {
+/*aside {
 	background: #FAFAFA;
 }
 
 aside p {
-/*	border: 1px solid #bbb;*/
-	/*background: #ddd;*/
+	border: 1px solid #bbb;
+	background: #ddd;
 	color: black;
 	height: 2000px;
 
-}
+}*/
 
 footer a {
 	color: rgba(0, 0, 0, 0.8);
@@ -102,16 +102,14 @@ article {
 article > *:first-child {
 }
 
-aside {
+/*aside {
 	padding: 50px 15px;
 }
-
-/* Aside */
 
 aside p {
 	border-radius: 10px;
 	padding: 20px 20px;
-}
+}*/
 
 
 /* Footer */
@@ -209,6 +207,12 @@ img.small {
 	box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.12), 0px 0px 0px 0px rgba(0,0,0,0.24);
 }
 
+#sim {
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.12), 0px 0px 0px 0px rgba(0,0,0,0.24);
+}
+
 .headBox {
     background-color: #FFFFFF; 
     /* position: fixed; */
@@ -232,7 +236,7 @@ img.small {
 }
 
 .liFlex {
-	background: #FCFCF7;
+	background: #FEFCFF;
  	border-radius: 3px;
  	height: 30px;
 	width: 100%;
@@ -255,11 +259,15 @@ li a {
 }
 
 .sideBox {
-	flex: 0.96; /* Iset the flex value to 0.96 to align the aside box with the menue box on top of in the header. they both accupy 1/3 of the space but the menue box has padding*/
+	flex: 1.042; /* Iset the flex value to 0.96 to align the aside box with the menue box on top of in the header. they both accupy 1/3 of the space but the menue box has padding*/
 	background-color: #FCFCF7;
 	overflow-y: scroll;
 	margin-top: 1px;
 	margin-left: 1px;
+}
+
+#simSide {
+	background-color: #FCFCF7;
 }
 
 .footBox {
