--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,8 @@ li a {
 	flex: 2;
 	overflow-y: scroll;
 	margin-top: 1px;
+	padding-left: 60px;
+	padding-right: 60px;
 }
 
 .sideBox {
@@ -264,6 +266,7 @@ li a {
 	overflow-y: scroll;
 	margin-top: 1px;
 	margin-left: 1px;
+	padding: 20px, 20px, 20px, 20px;
 }
 
 #simSide {
