--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,6 @@ a {
 	font-size: 18px;
 }
 
-
 /* Positioning and margins */
 
 @media (min-width: 1100px) {
@@ -102,14 +101,14 @@ article {
 article > *:first-child {
 }
 
-/*aside {
+aside {
 	padding: 50px 15px;
 }
 
 aside p {
 	border-radius: 10px;
 	padding: 20px 20px;
-}*/
+}
 
 
 /* Footer */
