--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-/* Importing webfonts */
-
-@import url(https://fonts.googleapis.com/css?family=Yeseva+One);
-@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,700,700italic,400italic);
-
-
 /* CSS reset rules */
 
 html, body {
@@ -55,27 +49,15 @@ table {
 /* Fonts and colors */
 
 body {
-	font-family: 'Avenir', serif;
+	font-family: 'Avenir', "Century Gothic", "sans-serif";
 	color: rgba(0, 0, 0, 0.8);
 	line-height: 1.7em;
 }
 h1, h2, h3, h4, h5, h6, header {
-	font-family: 'Avenir';
+	font-family: 'Avenir', "Century Gothic", "sans-serif";
     font-weight: 100;
     letter-spacing: -1px;
 }
-
-/*aside {
-	background: #FAFAFA;
-}
-
-aside p {
-	border: 1px solid #bbb;
-	background: #ddd;
-	color: black;
-	height: 2000px;
-
-}*/
 
 footer a {
 	color: rgba(0, 0, 0, 0.8);
@@ -92,10 +74,6 @@ a {
 		width: 1100px;
 		margin: 0 auto;
 	}
-}
-
-article {
-	padding: 30px 15px;
 }
 
 article > *:first-child {
@@ -127,11 +105,13 @@ p {
 
 h1 {
 	font-size: 36px;
-	padding: 30px 0 10px;
+	padding: 60px 55px;
+	font-weight: 900;
+	line-height: 36px
 }
 
 #title {
-	padding: 40px 0 0 10px;
+	padding: 32px 20px 0px 60px;
 }
 
 h2 {
@@ -213,37 +193,28 @@ img.small {
 }
 
 .headBox {
+	display: flex;
+	flex: column;
+	justify-content: flex-start;
     background-color: #FFFFFF; 
-    /* position: fixed; */
-    background-image: url("http://cdn.zmescience.com/wp-content/uploads/2015/06/robot.jpg");
-    background-size: auto 83px;
+    background-image: url("RoboHead.png");
+    background-size: auto 110px;
     background-repeat: no-repeat;
-    background-position: right 7px;
-    padding: 0 1px 44px 0;
-    height: 80px;
+    background-position: 98% 20px;
+    height: 200px;
     box-shadow: 0 2px 0 rgba(0,0,0,0.12), 0 1px 0px rgba(0,0,0,0.18);
 }
 
 .ulBox {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     list-style: none;
-    width: 100%;
-    margin-top: 5px;
-    padding: 0px 1px 1px 1px;
+    padding-left: 220px;
+    padding-top: 32px;
 }
 
 .liFlex {
-	background: #FEFCFF;
- 	border-radius: 3px;
- 	height: 30px;
-	width: 100%;
-	margin-top: 20px;
-	box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12);
-    text-align:center;
-    display: inline-block;
-    vertical-align: middle;
+	max-width: 300px;
 }
 
 li a {
@@ -254,13 +225,14 @@ li a {
 	background-color: #FCFCF7;
 	flex: 2;
 	overflow-y: scroll;
-	margin-top: 1px;
+	margin-top: 2px;
 	padding-left: 60px;
 	padding-right: 60px;
+	padding-top: 35px;
 }
 
 .sideBox {
-	flex: 1.042; /* Iset the flex value to 0.96 to align the aside box with the menue box on top of in the header. they both accupy 1/3 of the space but the menue box has padding*/
+	flex: 1;
 	background-color: #FCFCF7;
 	overflow-y: scroll;
 	margin-top: 1px;
