--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ img.small {
     background-size: auto 110px;
     background-repeat: no-repeat;
     background-position: 98% 13px;
-    box-shadow: 0 2px 0 rgba(0,0,0,0.12), 0 1px 0px rgba(0,0,0,0.18);
+    box-shadow: 0px 2px 8px 0px rgba(26, 47, 16, 0.5), 0px 0px 10px 0px rgba(25,25,21,-10.82);
 }
 
 .ulBox {
