--- a/styles.css
+++ b/styles.css
@@ -247,13 +247,15 @@ img.small {
     margin-top: 1px;
     margin-left: 1px;
     overflow-y: scroll;
+    padding: 20px 20px 20px 20px;
 }
 
 .sideBox p{
 	padding: 15px 15px 15px 15px;
 }
 
-.disqus_thread{}
+.disqus_thread{
+}
 
 .footBox{
 	background-color: #F5F5F5;
