--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,7 @@ img.small {
 .result{
 	width: 75%;
 	height: 120px;
-	background-color: rgba(185, 255, 219, 0.15);
+	background-color: rgba(212, 212, 212, 0.15);;
 	margin: 0 auto;
 	/*padding: 0px 0px 40px 0px;*/
 	/*box-shadow: 0px 0px 3px 0px;*/
