--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,10 @@ img.small {
 #run{
 	display: flex;
 	justify-content: center;
-	background-color: rgb(107, 208, 120);
+	/*background-color: rgb(107, 208, 120);*/
+	background-color: rgb(169, 169, 169);
+	font-style: italic;
+	color: #4E4D4D;
 	width: 20%;
 	border-radius: 5px;
 	box-shadow:  0px 1px 5px 0px;
