--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,11 @@ img.small {
 	margin-top: 2px;
 	margin-bottom: 5px;
 }
+/*Git-Hub card styling*/
+
+.github-card{
+	padding: 15px 15px 35px 15px;
+}
 
 /*styles for the sim page*/
 
