--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,8 @@ img.small {
 
 .bodyContainer{
 	display: flex;
-    flex-direction: column;
-    background-color: #FFFFFF;
+  flex-direction: column;
+  background-color: #FFFFFF;
 }
 
 .headContainer{
@@ -208,9 +208,9 @@ img.small {
 .articleBox{
 	flex: 2;
 	background-color: rgba(247, 247, 247, 0.27);
-    margin-top: 1px;
-    margin-right: 1px;
-    overflow-y: scroll;
+  margin-top: 1px;
+  margin-right: 1px;
+  overflow-y: scroll;
 }
 
 #smart_thumbnail{
@@ -219,7 +219,6 @@ img.small {
 
 .articleBox p{
 	padding: 25px 75px 25px 75px;
-	/*letter-spacing: 0.5px;*/
 	line-height: 1.7;
 	overflow-y: scroll;
 	text-align: justify;
@@ -246,10 +245,10 @@ img.small {
 	flex-direction: column;
 	flex: 1;
 	background-color: rgba(247, 247, 247, 0.27);
-    margin-top: 1px;
-    margin-left: 1px;
-    overflow-y: scroll;
-    padding: 60px 20px 20px 20px;
+  margin-top: 1px;
+  margin-left: 1px;
+  overflow-y: scroll;
+  padding: 60px 20px 20px 20px;
 }
 
 .sideBox p{
@@ -261,9 +260,14 @@ img.small {
 
 .footBox{
 	background-color: #F5F5F5;
-	padding: 32px 75px 32px 75px;
+	padding: 15px 75px 0px 75px;
 	margin-top: 2px;
 	margin-bottom: 5px;
+}
+/*Git-Hub card styling*/
+
+#gitBox{
+	padding: 15px 15px 35px 15px;
 }
 
 /*styles for the sim page*/
@@ -279,8 +283,9 @@ img.small {
 
 #simHead{
 	margin: 0 auto;
-	padding: 50px 0px 50px 0px;
+	padding: 25px 0px 30px 0px;
 }
+
 #msg{
 	margin: 0 auto;
 	padding: 25px 0px 10px 0px;
@@ -304,7 +309,7 @@ img.small {
 	vertical-align: middle;
 	font-size: 32px;
 	line-height: 1.5;
-	font-weight: 600;
+	font-weight: 500;
 	/*margin: 0;*/
 	/*padding-bottom: 55px;*/
 }
@@ -313,6 +318,7 @@ img.small {
 	width: 75%;
 	margin: 0 auto;
 	display: flex;
+	display:-webkit-flex
 	flex-direction: row;
 	padding-top: 5px;
 }
@@ -348,6 +354,6 @@ img.small {
 }
 
 #temp{
-	padding: 25px 135px 0px 135px;
+	padding: 0px 135px 0px 135px;
 	text-align: justify;
 }
