--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 html, body {
 	height: 100%;
 	min-height: 100%;
@@ -55,6 +53,8 @@ body {
 	font-family: 'Avenir', "Century Gothic", "sans-serif";
 	color: rgba(0, 0, 0, 0.8);
 	line-height: 1.5em;
+
+
 }
 
 h1, h2, h3, h4, h5, h6, header {
@@ -93,36 +93,29 @@ footer {
 
 h1 {
 	font-size: 36px;
-	padding: 10px 0 50px;
 	font-weight: 100;
 }
 
 h2 {
 	font-size: 28px;
-    padding: 10px 0 50px;
 }
 
 h3 {
 	font-size: 28px;
-	margin: 25px 0 0 10px;
-	/*padding: 50px 0 25px;*/
 }
 
 h4 {
 	font-size: 20px;
 	font-weight: bold;
-	margin: 20px 0 10px;
 }
 
 h5 {
 	font-size: 18px;
 	font-weight: bold;
-	margin: 15px 0 10px;
 }
 
 h6 {
 	font-weight: bold;
-	margin: 5px 0;
 }
 
 @media (max-width: 800px) {
@@ -134,7 +127,7 @@ h6 {
   	display: block;
   }
 
-  header.right {
+  header.socialBox {
   	float: none;
   }
 }
@@ -150,47 +143,39 @@ img.small {
 	overflow: auto;
 }
 
-header .right {
-	display: flex;
-	flex-direction: column;
-	margin: 2px -60px 0px 0px;
-  	/*float: none;*/
-  }
-
 /*Special Styling*/
 
 .bodyContainer{
 	display: flex;
-  flex-direction: column;
-  background-color: #FFFFFF;
+  	flex-direction: column;
+  	background-color: #FFFFFF;
 }
 
 .headContainer{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	min-width: 500px;
 	background-color: rgba(245, 245, 245, 0.38);;
 	box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.51);
 }
 
 .titleBox{
 	flex: 1;
-	padding: 45px 0px 0px 60px;
+	min-width: 260px;
 }
 .titleBox h1{
 	color: #4B584D;
 	font-weight: 900;
 	font-size: 38px;
 	line-height: 32px;
+	padding: 25px 0px 0px 75px;
 }
 
 .ulBox{
 	flex: 1;
-	padding: 35px 35px 0px 163px;
 	list-style: none;
-}
-.ulBox ul{
-	list-style: none;
+	min-width: 100px;
+	padding-top: 5px;
 }
 
 .liFlex a {
@@ -201,23 +186,37 @@ header .right {
 }
 
 .imageBox{
+	display: flex;
+	flex-direction: column;
 	flex: 1;
-	padding: 30px 45px 0px 300px;
 }
+
+.headImg{
+	margin-left: auto;
+	padding: 15px 35px 0px 0px;
+}
+
+.socialBox {
+	display: flex;
+	margin-left: auto;
+	flex-direction: column;
+	flex-flow: row wrap;
+  }
 
 .mainContainer{
 	display: flex;
 	flex-direction: row;
+	flex-flow: row wrap;
 	height: 100%;
-	flex-wrap: wrap;
 }
 
 .articleBox{
 	flex: 2;
+	min-width: 500px;
 	background-color: rgba(247, 247, 247, 0.27);
-  margin-top: 1px;
-  margin-right: 1px;
-  overflow-y: scroll;
+  	margin-top: 1px;
+ 	margin-right: 1px;
+  	overflow-y: scroll;
 }
 
 #smart_thumbnail{
@@ -252,10 +251,10 @@ header .right {
 	flex-direction: column;
 	flex: 1;
 	background-color: rgba(247, 247, 247, 0.27);
-  margin-top: 1px;
-  margin-left: 1px;
-  overflow-y: scroll;
-  padding: 60px 20px 20px 20px;
+  	margin-top: 1px;
+  	margin-left: 1px;
+  	overflow-y: scroll;
+  	padding: 60px 20px 20px 20px;
 }
 
 .sideBox p{
