--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ img.small {
 
 .imageBox{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	flex: 1;
 }
 
@@ -200,8 +200,11 @@ img.small {
 	display: flex;
 	margin-left: auto;
 	flex-direction: column;
-	flex-flow: row wrap;
   }
+
+.fb-share-button{
+	margin: 0px 2px 2px 2px;
+}
 
 .mainContainer{
 	display: flex;
