--- a/styles.css
+++ b/styles.css
@@ -81,14 +81,6 @@ a {
 	}
 }
 
-/* Footer */
-
-footer {
-	padding: 5px 15px;
-	height: 120px;
-}
-
-
 /* Text styles and margins */
 
 h1 {
@@ -141,6 +133,16 @@ img {
 img.small {
 	width: 100px;
 	overflow: auto;
+}
+
+footer{
+	background-color: #F5F5F5;
+	padding: 5px 0px 0px 75px;
+	margin-top: 2px;
+}
+
+footer p{
+	padding: 15px 15px 25px 0px;
 }
 
 /*Special Styling*/
@@ -206,11 +208,11 @@ img.small {
   }
 
 .tweet{
-	padding: 4px 1px 0px 0px;
+	padding: 4px 0px 0px 0px;
 }
 
 .fb-share-button{
-	padding: 0px 3px 2px 4px;
+	padding: 0px 3px 2px 5px;
 }
 
 .mainContainer{
@@ -274,12 +276,6 @@ img.small {
 .disqus_thread{
 }
 
-.footBox{
-	background-color: #F5F5F5;
-	padding: 15px 75px 0px 75px;
-	margin-top: 2px;
-	margin-bottom: 5px;
-}
 /*Git-Hub card styling*/
 
 #gitBox{
