--- a/styles.css
+++ b/styles.css
@@ -319,9 +319,10 @@ footer p{
 .result h3{
 	text-align: center;
 	vertical-align: middle;
+	margin-top: 10px;
 	font-size: 32px;
 	line-height: 1.5;
-	font-weight: 500;
+	font-weight: 400;
 	/*margin: 0;*/
 	/*padding-bottom: 55px;*/
 }
