--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,10 @@ footer p{
 	padding: 45px 0px 30px 0px;
 }
 
+.simHead h3{
+	font-size: 19px;
+}
+
 #msg{
 	margin: 0 auto;
 	padding: 25px 0px 10px 0px;
@@ -320,7 +324,7 @@ footer p{
 	text-align: center;
 	vertical-align: middle;
 	margin-top: 10px;
-	font-size: 32px;
+	font-size: 26px;
 	line-height: 1.5;
 	font-weight: 400;
 }
@@ -348,9 +352,8 @@ footer p{
 #run{
 	display: flex;
 	justify-content: center;
-	/*background-color: rgb(107, 208, 120);*/
-	background-color: rgb(169, 169, 169);
-	font-style: italic;
+	background-color: rgb(107, 208, 120);
+	/*background-color: rgb(169, 169, 169);*/
 	color: #4E4D4D;
 	width: 20%;
 	border-radius: 5px;
@@ -358,10 +361,13 @@ footer p{
 	margin: 0 auto;
 	margin-top: 25px;
 	margin-bottom: 30px;
+	
 }
-#run h3{
-	padding: 25px 35px 25px 35px;
+#run a{
+	padding: 15px 35px 15px 35px;
 	margin: 0 auto;
+	font-size: 23px;
+	text-decoration: none;
 }
 
 #temp{
