--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ footer{
 }
 
 footer p{
-	padding: 15px 15px 25px 75px;
+	padding: 15px 15px 25px 0px;
 	font-family: 'Avenir', "Century Gothic", "sans-serif";
 	font-size: 17px
 	text-align: right;
@@ -213,7 +213,7 @@ footer a{
 	display: flex;
 	margin-left: auto;
 	flex-direction: row;
-	flex-flow: row wrap;
+	flex-wrap: wrap;
   }
 
 .tweet{
@@ -227,8 +227,8 @@ footer a{
 .mainContainer{
 	display: flex;
 	flex-direction: row;
-	flex-flow: row wrap;
-	height: 100%;
+	flex-wrap: wrap;
+	max-height: 100%;
 }
 
 .articleBox{
@@ -284,7 +284,7 @@ footer a{
 
 .footBox{
 	align-self: flex-end;
-	width: 100%
+	width: 100%;
 }
 
 .disqus_thread{
