--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,16 @@ footer a{
   	padding: 35px 20px 20px 20px;
 }
 
+.codeSideBox{
+	display: flex;
+	flex-direction: column;
+	height: 20%
+	background-color: rgba(247, 247, 247, 0.27);
+  	margin-top: 1px;
+  	margin-left: 1px;
+  	overflow-y: scroll;
+  	padding: 35px 20px 20px 20px;
+}
 .sideBox p{
 	padding: 15px 15px 15px 15px;
 }
