--- a/styles.css
+++ b/styles.css
@@ -292,13 +292,13 @@ footer a{
 
 .codeSideBox{
 	display: flex;
+	flex: 1;
 	flex-direction: row;
-	height: 20%
+	justify-content: space-around;
 	background-color: rgba(247, 247, 247, 0.27);
-  	margin-top: 1px;
-  	margin-left: 1px;
+  	margin: 2px 0px 2px 0px;
   	overflow-y: scroll;
-  	padding: 35px 20px 20px 20px;
+  	padding: 15px 20px 80px 20px;
 }
 .sideBox p{
 	padding: 15px 15px 15px 15px;
