--- a/styles.css
+++ b/styles.css
@@ -290,18 +290,18 @@ footer a{
   	padding: 35px 20px 20px 20px;
 }
 
-#content{
+/*#content{
 	flex: 2;
-}
+}*/
 .codeSideBox{
 	display: flex;
-	flex: 1;
-	min-height: 300px;
+/*	flex: 1;*/
+	min-height: 420px;
 	flex-direction: row;
 	justify-content: space-around;
 	background-color: rgba(247, 247, 247, 0.27);
   	margin: 2px 0px 2px 0px;
-  	/*overflow-y: scroll;*/
+  	overflow-y: scroll;
   	padding: 15px 20px 80px 20px;
 }
 .sideBox p{
