--- a/styles.css
+++ b/styles.css
@@ -292,10 +292,10 @@ footer a{
 
 /*#content{
 	flex: 2;
-}*/
+}
 .codeSideBox{
 	display: flex;
-/*	flex: 1;*/
+	flex: 1;
 	min-height: 420px;
 	flex-direction: row;
 	justify-content: space-around;
@@ -303,7 +303,7 @@ footer a{
   	margin: 2px 0px 2px 0px;
   	overflow-y: scroll;
   	padding: 15px 20px 80px 20px;
-}
+}*/
 .sideBox p{
 	padding: 15px 15px 15px 15px;
 }
